--- a/sass/sprite.scss
+++ b/sass/sprite.scss
@@ -1,10 +1,10 @@
 %svg-common {
-	background: url("svg/sprite.css-0c943133.svg") no-repeat;
+	background: url("svg/sprite.css-410c2f0a.svg") no-repeat;
 }
 
 .svg-archived-memo {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 26.181818181818183%;
+	background-position: 99.64285714285714% 32%;
 }
 
 .svg-archived-memo-dims {
@@ -14,7 +14,7 @@
 
 .svg-arrow-down {
 	@extend %svg-common;
-	background-position: 98.6970684039088% 25.441696113074205%;
+	background-position: 63.541666666666664% 97.17314487632508%;
 }
 
 .svg-arrow-down-dims {
@@ -24,7 +24,7 @@
 
 .svg-arrow-down-blue {
 	@extend %svg-common;
-	background-position: 99.34426229508196% 13.523131672597865%;
+	background-position: 52.0979020979021% 97.86476868327402%;
 }
 
 .svg-arrow-down-blue-dims {
@@ -34,7 +34,7 @@
 
 .svg-arrow-down-green {
 	@extend %svg-common;
-	background-position: 99.34426229508196% 7.117437722419929%;
+	background-position: 45.80419580419581% 97.86476868327402%;
 }
 
 .svg-arrow-down-green-dims {
@@ -54,7 +54,7 @@
 
 .svg-arrow-left-green {
 	@extend %svg-common;
-	background-position: 17.454545454545453% 0;
+	background-position: 18.75% 0;
 }
 
 .svg-arrow-left-green-dims {
@@ -74,7 +74,7 @@
 
 .svg-arrow-right-black {
 	@extend %svg-common;
-	background-position: 17.454545454545453% 19.12350597609562%;
+	background-position: 18.75% 19.12350597609562%;
 }
 
 .svg-arrow-right-black-dims {
@@ -84,7 +84,7 @@
 
 .svg-arrow-right-green {
 	@extend %svg-common;
-	background-position: 34.90909090909091% 0;
+	background-position: 37.5% 0;
 }
 
 .svg-arrow-right-green-dims {
@@ -94,7 +94,7 @@
 
 .svg-arrow-right-white {
 	@extend %svg-common;
-	background-position: 34.90909090909091% 19.12350597609562%;
+	background-position: 37.5% 19.12350597609562%;
 }
 
 .svg-arrow-right-white-dims {
@@ -104,7 +104,7 @@
 
 .svg-arrow-up {
 	@extend %svg-common;
-	background-position: 98.6970684039088% 19.78798586572438%;
+	background-position: 57.986111111111114% 97.17314487632508%;
 }
 
 .svg-arrow-up-dims {
@@ -114,7 +114,7 @@
 
 .svg-burger {
 	@extend %svg-common;
-	background-position: 60.40268456375839% 83.74558303886926%;
+	background-position: 100% 0;
 }
 
 .svg-burger-dims {
@@ -124,7 +124,7 @@
 
 .svg-checkbox {
 	@extend %svg-common;
-	background-position: 71.61716171617162% 75.26881720430107%;
+	background-position: 32.04225352112676% 98.5663082437276%;
 }
 
 .svg-checkbox-dims {
@@ -134,7 +134,7 @@
 
 .svg-checkbox-checked {
 	@extend %svg-common;
-	background-position: 71.61716171617162% 68.10035842293907%;
+	background-position: 25% 98.5663082437276%;
 }
 
 .svg-checkbox-checked-dims {
@@ -144,7 +144,7 @@
 
 .svg-chevron {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 52.36363636363637%;
+	background-position: 8.571428571428571% 100%;
 }
 
 .svg-chevron-dims {
@@ -154,7 +154,7 @@
 
 .svg-chevron-green {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 69.81818181818181%;
+	background-position: 99.64285714285714% 75.63636363636364%;
 }
 
 .svg-chevron-green-dims {
@@ -164,7 +164,7 @@
 
 .svg-close {
 	@extend %svg-common;
-	background-position: 33.44709897610922% 88.10408921933086%;
+	background-position: 63.503649635036496% 88.10408921933086%;
 }
 
 .svg-close-dims {
@@ -174,7 +174,7 @@
 
 .svg-close-black {
 	@extend %svg-common;
-	background-position: 23.208191126279864% 88.10408921933086%;
+	background-position: 52.55474452554745% 88.10408921933086%;
 }
 
 .svg-close-black-dims {
@@ -184,7 +184,7 @@
 
 .svg-close-blue {
 	@extend %svg-common;
-	background-position: 12.969283276450511% 88.10408921933086%;
+	background-position: 41.605839416058394% 88.10408921933086%;
 }
 
 .svg-close-blue-dims {
@@ -194,7 +194,7 @@
 
 .svg-download {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 99.64285714285714% 14.545454545454545%;
 }
 
 .svg-download-dims {
@@ -204,7 +204,7 @@
 
 .svg-ellipse {
 	@extend %svg-common;
-	background-position: 95.58359621451105% 30.034129692832764%;
+	background-position: 76.84563758389261% 64.84641638225256%;
 }
 
 .svg-ellipse-dims {
@@ -214,7 +214,7 @@
 
 .svg-ellipse-empty {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 43.63636363636363%;
+	background-position: 99.64285714285714% 49.45454545454545%;
 }
 
 .svg-ellipse-empty-dims {
@@ -224,7 +224,7 @@
 
 .svg-ellipse-selected {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 34.90909090909091%;
+	background-position: 99.64285714285714% 40.72727272727273%;
 }
 
 .svg-ellipse-selected-dims {
@@ -234,7 +234,7 @@
 
 .svg-facebook {
 	@extend %svg-common;
-	background-position: 69.20289855072464% 0;
+	background-position: 36.57587548638132% 75.39682539682539%;
 }
 
 .svg-facebook-dims {
@@ -244,7 +244,7 @@
 
 .svg-facebook-green-fill {
 	@extend %svg-common;
-	background-position: 52.17391304347826% 37.301587301587304%;
+	background-position: 74.31906614785993% 18.650793650793652%;
 }
 
 .svg-facebook-green-fill-dims {
@@ -254,7 +254,7 @@
 
 .svg-facebook-green-outline {
 	@extend %svg-common;
-	background-position: 52.17391304347826% 18.650793650793652%;
+	background-position: 74.31906614785993% 0;
 }
 
 .svg-facebook-green-outline-dims {
@@ -264,7 +264,7 @@
 
 .svg-facebook-white {
 	@extend %svg-common;
-	background-position: 17.028985507246375% 75.39682539682539%;
+	background-position: 56.03112840466926% 37.301587301587304%;
 }
 
 .svg-facebook-white-dims {
@@ -274,7 +274,7 @@
 
 .svg-folder {
 	@extend %svg-common;
-	background-position: 23.102310231023104% 97.86476868327402%;
+	background-position: 98.2394366197183% 91.1032028469751%;
 }
 
 .svg-folder-dims {
@@ -284,7 +284,7 @@
 
 .svg-info {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 39.08450704225352% 98.5663082437276%;
 }
 
 .svg-info-dims {
@@ -294,7 +294,7 @@
 
 .svg-insights-article {
 	@extend %svg-common;
-	background-position: 83.50877192982456% 59.38697318007663%;
+	background-position: 89.47368421052632% 61.68582375478927%;
 }
 
 .svg-insights-article-dims {
@@ -304,7 +304,7 @@
 
 .svg-insights-article-hover {
 	@extend %svg-common;
-	background-position: 83.50877192982456% 15.708812260536398%;
+	background-position: 89.47368421052632% 76.24521072796935%;
 }
 
 .svg-insights-article-hover-dims {
@@ -314,7 +314,7 @@
 
 .svg-insights-audio {
 	@extend %svg-common;
-	background-position: 0 90.80459770114942%;
+	background-position: 89.47368421052632% 47.12643678160919%;
 }
 
 .svg-insights-audio-dims {
@@ -324,7 +324,7 @@
 
 .svg-insights-audio-hover {
 	@extend %svg-common;
-	background-position: 83.50877192982456% 73.9463601532567%;
+	background-position: 14.285714285714286% 90.80459770114942%;
 }
 
 .svg-insights-audio-hover-dims {
@@ -334,7 +334,7 @@
 
 .svg-insights-video {
 	@extend %svg-common;
-	background-position: 83.50877192982456% 44.827586206896555%;
+	background-position: 28.571428571428573% 90.80459770114942%;
 }
 
 .svg-insights-video-dims {
@@ -344,7 +344,7 @@
 
 .svg-insights-video-hover {
 	@extend %svg-common;
-	background-position: 83.50877192982456% 30.268199233716476%;
+	background-position: 0 90.80459770114942%;
 }
 
 .svg-insights-video-hover-dims {
@@ -354,7 +354,7 @@
 
 .svg-linkedin {
 	@extend %svg-common;
-	background-position: 69.20289855072464% 18.650793650793652%;
+	background-position: 54.86381322957198% 75.39682539682539%;
 }
 
 .svg-linkedin-dims {
@@ -364,7 +364,7 @@
 
 .svg-linkedin-green-fill {
 	@extend %svg-common;
-	background-position: 0 75.39682539682539%;
+	background-position: 56.03112840466926% 18.650793650793652%;
 }
 
 .svg-linkedin-green-fill-dims {
@@ -374,7 +374,7 @@
 
 .svg-linkedin-green-outline {
 	@extend %svg-common;
-	background-position: 69.20289855072464% 55.95238095238095%;
+	background-position: 18.28793774319066% 75.39682539682539%;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -384,7 +384,7 @@
 
 .svg-linkedin-white {
 	@extend %svg-common;
-	background-position: 69.20289855072464% 37.301587301587304%;
+	background-position: 0 75.39682539682539%;
 }
 
 .svg-linkedin-white-dims {
@@ -394,7 +394,7 @@
 
 .svg-listen {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 8.727272727272727%;
+	background-position: 99.64285714285714% 58.18181818181818%;
 }
 
 .svg-listen-dims {
@@ -402,9 +402,29 @@
 	height: 24px;
 }
 
+.svg-mail-green-fill {
+	@extend %svg-common;
+	background-position: 74.31906614785993% 55.95238095238095%;
+}
+
+.svg-mail-green-fill-dims {
+	width: 47px;
+	height: 47px;
+}
+
+.svg-mail-green-outline {
+	@extend %svg-common;
+	background-position: 74.31906614785993% 37.301587301587304%;
+}
+
+.svg-mail-green-outline-dims {
+	width: 47px;
+	height: 47px;
+}
+
 .svg-map-icon {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 17.454545454545453%;
+	background-position: 99.64285714285714% 23.272727272727273%;
 }
 
 .svg-map-icon-dims {
@@ -414,7 +434,7 @@
 
 .svg-search {
 	@extend %svg-common;
-	background-position: 43.0976430976431% 86.81318681318682%;
+	background-position: 73.38129496402878% 86.81318681318682%;
 }
 
 .svg-search-dims {
@@ -424,7 +444,7 @@
 
 .svg-search-blue {
 	@extend %svg-common;
-	background-position: 51.851851851851855% 86.81318681318682%;
+	background-position: 82.73381294964028% 86.81318681318682%;
 }
 
 .svg-search-blue-dims {
@@ -434,7 +454,7 @@
 
 .svg-search-icon {
 	@extend %svg-common;
-	background-position: 33.333333333333336% 73.64341085271317%;
+	background-position: 71.48288973384031% 73.64341085271317%;
 }
 
 .svg-search-icon-dims {
@@ -444,7 +464,7 @@
 
 .svg-search-icon-hover {
 	@extend %svg-common;
-	background-position: 47.87234042553192% 73.64341085271317%;
+	background-position: 90.49429657794677% 0;
 }
 
 .svg-search-icon-hover-dims {
@@ -454,7 +474,7 @@
 
 .svg-search-type-all {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 61.09090909090909%;
+	background-position: 99.64285714285714% 66.9090909090909%;
 }
 
 .svg-search-type-all-dims {
@@ -464,7 +484,7 @@
 
 .svg-search-type-insights {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 0;
+	background-position: 99.64285714285714% 5.818181818181818%;
 }
 
 .svg-search-type-insights-dims {
@@ -474,7 +494,7 @@
 
 .svg-search-type-people {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 78.54545454545455%;
+	background-position: 99.64285714285714% 84.36363636363636%;
 }
 
 .svg-search-type-people-dims {
@@ -484,7 +504,7 @@
 
 .svg-search-type-strategies {
 	@extend %svg-common;
-	background-position: 93.31103678929766% 87.27272727272727%;
+	background-position: 0 100%;
 }
 
 .svg-search-type-strategies-dims {
@@ -494,7 +514,7 @@
 
 .svg-twitter {
 	@extend %svg-common;
-	background-position: 51.08695652173913% 56.74603174603175%;
+	background-position: 54.86381322957198% 56.74603174603175%;
 }
 
 .svg-twitter-dims {
@@ -504,7 +524,7 @@
 
 .svg-twitter-green-fill {
 	@extend %svg-common;
-	background-position: 34.05797101449275% 56.74603174603175%;
+	background-position: 0 38.095238095238095%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -514,7 +534,7 @@
 
 .svg-twitter-green-outline {
 	@extend %svg-common;
-	background-position: 0 38.095238095238095%;
+	background-position: 18.28793774319066% 56.74603174603175%;
 }
 
 .svg-twitter-green-outline-dims {
@@ -534,7 +554,7 @@
 
 .svg-user {
 	@extend %svg-common;
-	background-position: 62.4113475177305% 73.64341085271317%;
+	background-position: 90.49429657794677% 15.891472868217054%;
 }
 
 .svg-user-dims {
@@ -544,7 +564,7 @@
 
 .svg-user-hover {
 	@extend %svg-common;
-	background-position: 84.39716312056737% 0;
+	background-position: 90.49429657794677% 31.782945736434108%;
 }
 
 .svg-user-hover-dims {
@@ -554,7 +574,7 @@
 
 .svg-view-all-blue {
 	@extend %svg-common;
-	background-position: 8% 99.6376811594203%;
+	background-position: 91.1032028469751% 85.8695652173913%;
 }
 
 .svg-view-all-blue-dims {
@@ -564,7 +584,7 @@
 
 .svg-view-all-green {
 	@extend %svg-common;
-	background-position: 15.666666666666666% 99.6376811594203%;
+	background-position: 17.081850533807827% 99.6376811594203%;
 }
 
 .svg-view-all-green-dims {
@@ -574,7 +594,7 @@
 
 .svg-youtube {
 	@extend %svg-common;
-	background-position: 52.17391304347826% 0;
+	background-position: 56.03112840466926% 0;
 }
 
 .svg-youtube-dims {
@@ -584,7 +604,7 @@
 
 .svg-youtube-green-fill {
 	@extend %svg-common;
-	background-position: 34.05797101449275% 38.095238095238095%;
+	background-position: 36.57587548638132% 38.095238095238095%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -594,7 +614,7 @@
 
 .svg-youtube-green-outline {
 	@extend %svg-common;
-	background-position: 17.028985507246375% 56.74603174603175%;
+	background-position: 36.57587548638132% 56.74603174603175%;
 }
 
 .svg-youtube-green-outline-dims {
@@ -604,7 +624,7 @@
 
 .svg-youtube-white {
 	@extend %svg-common;
-	background-position: 17.028985507246375% 38.095238095238095%;
+	background-position: 18.28793774319066% 38.095238095238095%;
 }
 
 .svg-youtube-white-dims {
